--- a/ElysiumApp/app/src/main/res/layout/activity_registration.xml
+++ b/ElysiumApp/app/src/main/res/layout/activity_registration.xml
@@ -9,13 +9,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.RegistrationActivity">
+    tools:context=".ui.activities.RegistrationActivity">
 
     <EditText
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="184dp"
         android:autofillHints="@string/prompt_login"
         android:hint="@string/prompt_login"
         android:inputType="textEmailAddress"
