--- a/ElysiumApp/app/src/main/res/layout/activity_registration.xml
+++ b/ElysiumApp/app/src/main/res/layout/activity_registration.xml
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/register"
         android:layout_width="@dimen/log_in_and_register_buttons_width"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
@@ -73,14 +73,12 @@
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="64dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        android:indeterminateDrawable="@drawable/spinner"
+        android:indeterminateOnly="true"
+        app:layout_constraintStart_toStartOf="@+id/register"
+        app:layout_constraintEnd_toEndOf="@+id/register"
+        app:layout_constraintTop_toBottomOf="@+id/register"
+        android:layout_marginTop="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
