--- a/ElysiumApp/app/src/main/res/layout/activity_login.xml
+++ b/ElysiumApp/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/darkBackground"
     tools:context=".ui.activities.LoginActivity">
 
     <EditText
@@ -20,6 +21,8 @@
         android:hint="@string/prompt_login"
         android:inputType="text"
         android:selectAllOnFocus="true"
+        android:background="@color/lightBackground"
+        android:padding="@dimen/edit_text_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,6 +38,8 @@
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
+        android:background="@color/lightBackground"
+        android:padding="@dimen/edit_text_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username" />
@@ -48,6 +53,7 @@
         android:layout_marginBottom="64dp"
         android:enabled="false"
         android:text="@string/action_sign_in"
+        android:padding="@dimen/button_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,8 +66,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/login"
         app:layout_constraintStart_toStartOf="@+id/login"
-        android:enabled="false"
         android:text="@string/action_register"
+        android:padding="@dimen/button_padding"
         android:layout_marginTop="24dp"/>
 
     <ProgressBar
