--- a/ElysiumApp/app/src/main/res/layout/activity_registration.xml
+++ b/ElysiumApp/app/src/main/res/layout/activity_registration.xml
@@ -9,6 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/darkBackground"
     tools:context=".ui.activities.RegistrationActivity">
 
     <EditText
@@ -20,6 +21,8 @@
         android:hint="@string/prompt_login"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
+        android:background="@color/lightBackground"
+        android:padding="@dimen/edit_text_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,6 +38,8 @@
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
+        android:background="@color/lightBackground"
+        android:padding="@dimen/edit_text_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username" />
@@ -50,6 +55,8 @@
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
+        android:background="@color/lightBackground"
+        android:padding="@dimen/edit_text_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
@@ -63,6 +70,7 @@
         android:layout_marginBottom="64dp"
         android:enabled="false"
         android:text="@string/action_register"
+        android:padding="@dimen/button_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
