--- a/ElysiumApp/app/src/main/res/layout/activity_main.xml
+++ b/ElysiumApp/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/darkBackground"
     tools:context=".ui.activities.MainActivity">
 
     <FrameLayout
