--- a/ElysiumApp/app/src/main/res/layout/activity_login.xml
+++ b/ElysiumApp/app/src/main/res/layout/activity_login.xml
@@ -75,11 +75,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:indeterminateDrawable="@drawable/spinner"
-        android:indeterminateOnly="true"
-        app:layout_constraintStart_toStartOf="@+id/register"
-        app:layout_constraintEnd_toEndOf="@+id/register"
-        app:layout_constraintTop_toBottomOf="@+id/register"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/register" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
