--- a/ElysiumApp/app/src/main/res/values/dimens.xml
+++ b/ElysiumApp/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="log_in_and_register_buttons_width">160dp</dimen>
     <dimen name="edit_text_padding">6dp</dimen>
     <dimen name="button_padding">8dp</dimen>
+    <dimen name="border_width">1dp</dimen>
 </resources>
