--- a/ElysiumApp/app/src/main/res/layout/comment_item.xml
+++ b/ElysiumApp/app/src/main/res/layout/comment_item.xml
@@ -6,41 +6,49 @@
     android:layout_height="wrap_content"
     android:background="@drawable/border">
 
-    <ImageView
-        android:layout_margin="5dp"
-        android:id="@+id/ivItemImage"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/lightBackground" />
-
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvPrimary"
+        android:id="@+id/tvNickname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:gravity="center|start"
-        android:text="@string/playlist_title"
+        android:text="@string/nickname"
         android:layout_marginTop="8dp"
-        android:textSize="19sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ivItemImage"
+        android:textSize="15sp"
+        android:textColor="@color/secondaryText"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvSecondary"
+        android:id="@+id/tvDatetime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/_100_songs"
-        android:textSize="14sp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center|start"
+        android:text="@string/datetime"
+        android:layout_marginTop="8dp"
+        android:textSize="12sp"
         android:textColor="@color/secondaryText"
-        app:layout_constraintStart_toEndOf="@+id/ivItemImage"
-        app:layout_constraintTop_toBottomOf="@+id/tvPrimary" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tvComment"
+        android:text="@string/comment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:gravity="center|start"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvNickname"
+        android:textSize="11sp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
