--- a/ElysiumApp/app/src/main/res/layout/fragment_comments.xml
+++ b/ElysiumApp/app/src/main/res/layout/fragment_comments.xml
@@ -11,7 +11,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        
+
+        <View
+            android:id="@+id/head"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/head"
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
         <ProgressBar
             android:id="@+id/allCommentsProgressBar"
             android:layout_width="wrap_content"
@@ -26,13 +33,27 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvAllComments"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="500dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        
+            app:layout_constraintTop_toBottomOf="@id/head" />
+
+        <TextView
+            android:visibility="gone"
+            android:gravity="center"
+            android:text="@string/no_comments"
+            android:id="@+id/tvNoComments"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/head" />
+
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/evInputComment"
             android:layout_width="0dp"
