--- a/ElysiumApp/app/src/main/res/layout/comment_item.xml
+++ b/ElysiumApp/app/src/main/res/layout/comment_item.xml
@@ -7,13 +7,13 @@
     android:background="@drawable/border">
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvNickname"
+        android:id="@+id/tvUsername"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:gravity="center|start"
-        android:text="@string/nickname"
+        android:text="@string/username"
         android:layout_marginTop="8dp"
         android:textSize="15sp"
         android:textColor="@color/secondaryText"
@@ -46,7 +46,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvNickname"
+        app:layout_constraintTop_toBottomOf="@id/tvUsername"
         android:textSize="11sp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent" />
