--- a/ElysiumApp/app/src/main/res/layout/comment_item.xml
+++ b/ElysiumApp/app/src/main/res/layout/comment_item.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvComment"
+        android:id="@+id/tvContent"
         android:text="@string/comment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
