Complete comments loading

--- a/ElysiumApp/app/src/main/res/layout/activity_main.xml
+++ b/ElysiumApp/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:id="@+id/vpSong"
         android:layout_width="0dp"
         android:layout_height="56dp"
-        android:background="@color/darkBackground"
+        android:background="@color/lightBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ivPlayPause"
         app:layout_constraintStart_toEndOf="@+id/ivCurSongImage" />
@@ -51,7 +51,7 @@
         android:id="@+id/ivPlayPause"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:background="@color/darkBackground"
+        android:background="@color/lightBackground"
         android:src="@drawable/ic_play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
