--- a/ElysiumApp/app/src/main/res/layout/activity_main.xml
+++ b/ElysiumApp/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,46 @@
     android:background="@color/darkBackground"
     tools:context=".ui.activities.MainActivity">
 
+    <ImageView
+        android:id="@+id/ivUser"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:src="@drawable/ic_user"
+        android:padding="8dp"
+        android:background="@color/lightBackground"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tvTitle"
+        app:layout_constraintTop_toTopOf="@id/tvTitle" />
+
+
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:text="@string/app_name"
+        android:gravity="center"
+        android:padding="8dp"
+        android:textStyle="bold"
+        android:textSize="26sp"
+        android:letterSpacing="0.12"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/ivUser"
+        app:layout_constraintEnd_toStartOf="@id/ivSearch"
+        app:layout_constraintBottom_toTopOf="@id/flFragmentContainer"
+        android:background="@color/lightBackground" />
+
+    <ImageView
+        android:id="@+id/ivSearch"
+        app:layout_constraintStart_toEndOf="@id/tvTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tvTitle"
+        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:padding="8dp"
+        android:background="@color/lightBackground"
+        android:src="@drawable/ic_search" />
+
     <FrameLayout
         android:id="@+id/flFragmentContainer"
         android:layout_width="match_parent"
@@ -16,7 +56,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/tvTitle">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/navHostFragment"
